# PyE2

./: .gitignore  LICENSE  README.md  TODOs.md  __init__.py  pyproject.toml  requirements.txt  winrun.bat
.github/workflows/: python-publish.yml
PyE2/: __init__.py  _ver.py  base_decentra_object.py  plugins_manager_mixin.py  version.py
PyE2/base/: __init__.py  distributed_custom_code_presets.py  generic_session.py  instance.py  logger.py  node.py  pipeline.py  plugin_template.py  responses.py  tmpeb3hj3eh  transaction.py
PyE2/base/payload/: __init__.py  payload.py
PyE2/bc/: __init__.py  base.py  ec.py  func.py  test.py
PyE2/code_cheker/: __init__.py  base.py  checker.py
PyE2/comm/: __init__.py  amqp_wrapper.py  mqtt_wrapper.py
PyE2/const/: README.md  __init__.py  base.py  comms.py  environment.py  formatter.py  heartbeat.py  misc.py  payload.py
PyE2/default/: __init__.py  mqtt_session.py
PyE2/default/instance/: __init__.py  chain_dist_custom_job_01_plugin.py  custom_web_app_01_plugin.py  (+3 more)
PyE2/io_formatter/: __init__.py  consts.py  io_formatter_manager.py
PyE2/logging/: __init__.py  base_logger.py  small_logger.py
PyE2/tutorials/: .example_env  1. hello_world.py  10. real_time_custom_code_multiworker_extra.py  2. first_deploy.py  3. simple_real_time_custom_code.py  4. real_time_custom_code_2.py  5. real_time_custom_code_multithreading.py  6. real_time_custom_code_multithreading_extra.py  7. real_time_custom_code_multithreading.py  8. chatbot.py  9. real_time_custom_code_multiworker.py
PyE2/utils/: __init__.py  code.py  code_exec.py  comm_utils.py  dotenv.py
tutorials/: .example_env  1. connect_to_network.py  2. first_deploy.py  3. custom_code_on_one_remote__example_1.py  4. custom_code_on_one_remote__example_2.py  5. custom_code_on_one_remote__example_3.py  6. custom_code_on_multiple_remotes__example_1.py  7. custom_code_on_multiple_remotes__example_2.py  8. custom_code_fastapi.py  8. custom_web_app.py  9. code_sandbox_from_scratch.py  _example_pk_sdk.pem
tutorials/8. custom_code_fastapi_assets/: index.html
tutorials/9. code_sandbox_from_scratch_assets/: index.html
tutorials/video_presentation/: 1. hello_world.ipynb
xperimental/: .example_env  README.md  attach_example.py  ex1.py  hello.py  remote_exec.py  save_images.py
xperimental/_archive/: test.py
xperimental/_tutorials/: 3. simple_real_time_custom_code.py  4. real_time_custom_code_2.py  8. chatbot.py
xperimental/decentralized/: chain_dist_example.py  chain_dist_example_initiator.py  chain_dist_example_worker.py  dedist_example.py  dedist_example_initiator.py
xperimental/utils/: get_documentation.py
(+27 files in other folders)
