[build-system]
requires = ["hatchling", "pika", "paho-mqtt"]
build-backend = "hatchling.build"

[project]
name = "PyE2"
version = "0.0.0"
authors = [
  { name="Stefan Saraev", email="stefan.saraev@global-technical.com" },
  { name="Cristan Bleotiu", email="cristan.bleotiu@global-technical.com" },
  { name="Andrei Ionut Damian", email="andrei.damian@lummetry.ai" },
]
description = "PyE2 is an SDK used to communicate with the AiXpand network"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AiXpand/PyE2"
"Bug Tracker" = "https://github.com/AiXpand/PyE2/issues"