[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyE2"
version = "0.0.0"
authors = [
  { name="Stefan Saraev", email="stefan.saraev@global-technical.com" },
  { name="Cristan Bleotiu", email="cristan.bleotiu@global-technical.com" },
  { name="Andrei Ionut Damian", email="andrei.damian@lummetry.ai" },
]
description = "PyE2 is the Python SDK required for client app development in the AiXpand network"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pika", 
  "paho-mqtt", 
  "numpy",
  "cryptography"
]

[project.urls]
"Homepage" = "https://github.com/AiXpand/PyE2"
"Bug Tracker" = "https://github.com/AiXpand/PyE2/issues"